tests/ifcc-test-output/testfiles-part4_3-errorType/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:5: error: unknown type name ‘INTEGER’
    2 |     INTEGER variable;
      |     ^~~~~~~

return code: 1
